# default-backend-rs

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yaml  build.yml  pr.yml
deploy/: deployment.yaml  service.yaml
docker/: entrypoint.sh
src/: all_headers.rs  main.rs  metrics.rs
templates/: dbrs-error-no-code.html.hbs  dbrs-error-parse.html.hbs  default.html.hbs  error.html.hbs  unknown.html.hbs
