[package]
name = "default-backend-rs"
version = "0.1.0"
authors = ["Peter Grace <pete.grace@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_prometheus = "0.7.0"
serde_json = "1.0.57"

[dependencies.serde]
version = "1.0.116"
features = ["derive"]

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["handlebars_templates"]